--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,7 @@ build-all:
 
 test-all:
   stage: test
+  needs: ["build-all"]
   script:
       - make -C libraries/libapparmor check
       - make -C parser check
@@ -50,6 +51,20 @@ test-all:
     paths:
       - utils/test/htmlcov/
     when: always
+
+shellcheck:
+  stage: test
+  needs: []
+  script:
+  - apt-get install --no-install-recommends -y file shellcheck xmlstarlet
+  - shellcheck --version
+  - './tests/bin/shellcheck-tree --format=checkstyle --severity=error
+       | xmlstarlet tr tests/checkstyle2junit.xslt
+       > shellcheck.xml'
+  artifacts:
+    when: always
+    reports:
+      junit: shellcheck.xml
 
 # Disabled due to aa-logprof dependency on /sbin/apparmor_parser existing
 #      - make -C profiles check-profiles
