--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,9 @@
 ---
 image: ubuntu:latest
 before_script:
-  - export DEBIAN_FRONTEND=noninteractive && apt-get update -qq && apt-get install --no-install-recommends -y build-essential apache2-dev autoconf automake bison dejagnu flex libjs-jquery libjs-jquery-throttle-debounce libjs-jquery-isonscreen libjs-jquery-tablesorter libpam-dev libtool perl liblocale-gettext-perl pkg-config python3-all-dev pyflakes3 ruby-dev swig lsb-release python3-coverage python3-notify2 python3-psutil python3-setuptools zlib1g-dev
+  - export DEBIAN_FRONTEND=noninteractive
+  - apt-get update -qq
+  - apt-get install --no-install-recommends -y gcc perl liblocale-gettext-perl linux-libc-dev lsb-release make
   - lsb_release -a
   - uname -a
 
@@ -11,6 +13,9 @@ before_script:
 stages:
   - build
   - test
+
+.install-c-build-deps: &install-c-build-deps
+  - apt-get install --no-install-recommends -y build-essential apache2-dev autoconf automake bison dejagnu flex libpam-dev libtool pkg-config python3-all-dev python3-setuptools ruby-dev swig zlib1g-dev
 
 build-all:
   stage: build
@@ -27,6 +32,7 @@ build-all:
         - changehat/pam_apparmor/
         - profiles/
   script:
+      - *install-c-build-deps
       - cd libraries/libapparmor && ./autogen.sh && ./configure --with-perl --with-python --prefix=/usr && make && cd ../.. || { cat config.log ; exit 1 ; }
       - make -C parser
       - make -C binutils
@@ -35,22 +41,50 @@ build-all:
       - make -C changehat/pam_apparmor
       - make -C profiles
 
-test-all:
+test-libapparmor:
   stage: test
   needs: ["build-all"]
   script:
+      - *install-c-build-deps
       - make -C libraries/libapparmor check
+
+test-parser:
+  stage: test
+  needs: ["build-all"]
+  script:
+      - *install-c-build-deps
       - make -C parser check
+
+test-binutils:
+  stage: test
+  needs: ["build-all"]
+  script:
       - make -C binutils check
+
+test-utils:
+  stage: test
+  needs: ["build-all"]
+  script:
+      - apt-get install --no-install-recommends -y libc6-dev libjs-jquery libjs-jquery-throttle-debounce libjs-jquery-isonscreen libjs-jquery-tablesorter pyflakes3 python3-coverage python3-notify2 python3-psutil
       - make -C utils check
       - make -C utils/test coverage-regression
-      - make -C changehat/mod_apparmor check
-      - make -C profiles check-parser
-      - make -C profiles check-abstractions.d
   artifacts:
     paths:
       - utils/test/htmlcov/
     when: always
+
+test-mod-apparmor:
+  stage: test
+  needs: ["build-all"]
+  script:
+      - make -C changehat/mod_apparmor check
+
+test-profiles:
+  stage: test
+  needs: ["build-all"]
+  script:
+      - make -C profiles check-parser
+      - make -C profiles check-abstractions.d
 
 shellcheck:
   stage: test
