--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,3 +133,6 @@ include:
   - template: SAST.gitlab-ci.yml
   - template: Secret-Detection.gitlab-ci.yml
   - template: Dependency-Scanning.gitlab-ci.yml
+
+variables:
+  SAST_EXCLUDED_ANALYZERS: "spotbugs"
