--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,4 +134,4 @@ include:
   - template: Secret-Detection.gitlab-ci.yml
 
 variables:
-  SAST_EXCLUDED_ANALYZERS: "spotbugs"
+  SAST_EXCLUDED_ANALYZERS: "flawfinder,spotbugs"
