CI: disable ESLint SAST analyzer
We have no JavaScript code, let's make the GitLab CI user interface leaner.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,4 +134,4 @@ include:
   - template: Secret-Detection.gitlab-ci.yml
 
 variables:
-  SAST_EXCLUDED_ANALYZERS: "flawfinder,spotbugs"
+  SAST_EXCLUDED_ANALYZERS: "eslint,flawfinder,spotbugs"
