CI: don't run the Bandit SAST analyzer on our test suites
Let's focus for now on code that runs on our users' systems.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -135,3 +135,4 @@ include:
 
 variables:
   SAST_EXCLUDED_ANALYZERS: "eslint,flawfinder,semgrep,spotbugs"
+  SAST_BANDIT_EXCLUDED_PATHS: "*/tst/*, */test/*"
