tests: add userns regression tests
Signed-off-by: Georgia Garcia <georgia.garcia@canonical.com>

--- a/.gitignore
+++ b/.gitignore
@@ -295,6 +295,7 @@ tests/regression/apparmor/unix_fd_server
 tests/regression/apparmor/unix_socket
 tests/regression/apparmor/unix_socket_client
 tests/regression/apparmor/unlink
+tests/regression/apparmor/userns
 tests/regression/apparmor/uservars.inc
 tests/regression/apparmor/xattrs
 tests/regression/apparmor/xattrs_profile
