--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,32 @@ target_include_directories(${LIBRARY_NAME} PUBLIC ${AUTOGEN_SOURCE_DIR})
 #### Create the final executable ####
 add_executable(${PROJECT_NAME} ${MAIN_SOURCE})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBRARY_NAME})
+
+#### Add tests ####
+enable_testing()
+set(PROFILE_SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/test/simple_tests)
+
+file(GLOB_RECURSE 
+     TEST_PROFILES 
+     ${PROFILE_SOURCE_DIR}/*/*.sd
+)
+
+# Add each example profile as a test case
+foreach(PROFILE ${TEST_PROFILES})
+  # Determine whether the profile should pass or fail
+  file(READ ${PROFILE} PROFILE_TEXT)
+  string(FIND "${PROFILE_TEXT}" "EXRESULT PASS" TEST_SHOULD_PASS)
+
+  # Strip the filename from the path
+  file(RELATIVE_PATH PROFILE_NAME ${PROFILE_SOURCE_DIR} ${PROFILE})
+
+  # Create the test
+  add_test(${PROFILE_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME} ${PROFILE})
+
+  # If the test should fail, set "WILL_FAIL" property
+  if(NOT ${TEST_SHOULD_PASS} EQUAL -1)
+      set_tests_properties(${PROFILE_NAME} PROPERTIES WILL_FAIL FALSE)
+  else()
+      set_tests_properties(${PROFILE_NAME} PROPERTIES WILL_FAIL TRUE)
+  endif()
+endforeach()
