create framework for the AST

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ file(MAKE_DIRECTORY ${AUTOGEN_SOURCE_DIR})
 ### Sources that need to be built ###
 set(SOURCES
   ${PROJECT_SOURCE_DIR}/lib.c
-  ${PROJECT_SOURCE_DIR}/parser.c
+  ${PROJECT_SOURCE_DIR}/parser.cc
   ${PROJECT_SOURCE_DIR}/parser_include.c
+  ${PROJECT_SOURCE_DIR}/tree/TreeNode.cc
+  ${PROJECT_SOURCE_DIR}/tree/ParseTree.cc
 )
 
 set(MAIN_SOURCE
@@ -34,7 +36,7 @@ find_package(BISON REQUIRED)
 BISON_TARGET(PARSER 
               ${PARSE_INPUT} 
               ${AUTOGEN_SOURCE_DIR}/parser_yacc.cc
-              DEFINES_FILE ${AUTOGEN_SOURCE_DIR}/parser_yacc.hpp)
+              DEFINES_FILE ${AUTOGEN_SOURCE_DIR}/parser_yacc.h)
 
 #### Flex stuff ####
 find_package(FLEX 2.5.5 REQUIRED)
@@ -42,13 +44,11 @@ find_package(FLEX 2.5.5 REQUIRED)
 FLEX_TARGET(LEXER 
               ${LEXER_INPUT} 
               ${AUTOGEN_SOURCE_DIR}/parser_lex.cc
-              DEFINES_FILE ${AUTOGEN_SOURCE_DIR}/parser_lex.hpp)
+              DEFINES_FILE ${AUTOGEN_SOURCE_DIR}/parser_lex.h)
 
 ADD_FLEX_BISON_DEPENDENCY(LEXER PARSER)
 
 #### Set Compiler Options ####
-set(CMAKE_C_FLAGS "-g -O2 -pipe")
-
 set(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
 set(CMAKE_CXX_STANDARD 14)
 
