--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,18 +79,21 @@ file(GLOB_RECURSE
 foreach(PROFILE ${TEST_PROFILES})
   # Determine whether the profile should pass or fail
   file(READ ${PROFILE} PROFILE_TEXT)
-  string(FIND "${PROFILE_TEXT}" "EXRESULT PASS" TEST_SHOULD_PASS)
+  string(FIND "${PROFILE_TEXT}" "#=EXRESULT PASS" TEST_SHOULD_PASS)
+  string(FIND "${PROFILE_TEXT}" "#=DISABLED"      TEST_DISABLED)
 
   # Strip the filename from the path
   file(RELATIVE_PATH PROFILE_NAME ${PROFILE_SOURCE_DIR} ${PROFILE})
 
-  # Create the test
-  add_test(${PROFILE_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME} ${PROFILE})
+  # Create the test, if it is not marked as disabled
+  if(${TEST_DISABLED} EQUAL -1)
+    add_test(${PROFILE_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME} ${PROFILE})
 
-  # If the test should fail, set "WILL_FAIL" property
-  if(NOT ${TEST_SHOULD_PASS} EQUAL -1)
-      set_tests_properties(${PROFILE_NAME} PROPERTIES WILL_FAIL FALSE)
-  else()
-      set_tests_properties(${PROFILE_NAME} PROPERTIES WILL_FAIL TRUE)
+    # If the test should fail, set "WILL_FAIL" property
+    if(NOT ${TEST_SHOULD_PASS} EQUAL -1)
+        set_tests_properties(${PROFILE_NAME} PROPERTIES WILL_FAIL FALSE)
+    else()
+        set_tests_properties(${PROFILE_NAME} PROPERTIES WILL_FAIL TRUE)
+    endif()
   endif()
 endforeach()
