--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SOURCES
   ${PROJECT_SOURCE_DIR}/tree/ProfileNode.cc
   ${PROJECT_SOURCE_DIR}/tree/PrefixNode.cc
   ${PROJECT_SOURCE_DIR}/tree/AliasNode.cc
+  ${PROJECT_SOURCE_DIR}/tree/RuleNode.cc
   ${PROJECT_SOURCE_DIR}/tree/FileNode.cc
   ${PROJECT_SOURCE_DIR}/tree/LinkNode.cc
 )
