add GoogleTests to CTest build

--- a/test/src/e2e/CMakeLists.txt
+++ b/test/src/e2e/CMakeLists.txt
@@ -11,6 +11,11 @@ set(TEST_SOURCES
 find_package(PkgConfig)
 pkg_check_modules(GTEST gtest)
 
+include(GoogleTest)
+
+# To allow whitespace in test names
+cmake_policy(SET CMP0110 NEW)
+
 #### If gtest is installed, create the test executable ####
 if(${GTEST_FOUND})
   add_executable(${PROJECT_NAME} ${TEST_SOURCES})
@@ -18,6 +23,13 @@ if(${GTEST_FOUND})
   target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBRARY_NAME})
   target_link_libraries(${PROJECT_NAME} PUBLIC gtest)
 
-  #Set the location of profiles as a global variable for the tests
+  # Set the location of profiles as a global variable for the tests
   target_compile_definitions(${PROJECT_NAME} PUBLIC -DPROFILE_SOURCE_DIR="${PROFILE_SOURCE_DIR}")
+
+  # Add the tests to ctest
+  gtest_discover_tests(
+    ${PROJECT_NAME} 
+    TEST_PREFIX "[end-to-end] e2e."
+    PROPERTIES DEPENDS ${PROJECT_NAME}
+  )
 endif()
