--- a/test/simple/CMakeLists.txt
+++ b/test/simple/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 3.16.3)
 
 project(simple-test C CXX)
 
-set(TEST_SOURCES ./main.cc)
+set(TEST_SOURCES ./src/main.cc)
 
 #### Create the test executable ####
 add_executable(${PROJECT_NAME} ${TEST_SOURCES})
