--- a/test/e2e/CMakeLists.txt
+++ b/test/e2e/CMakeLists.txt
@@ -6,6 +6,7 @@ set(TEST_SOURCES
   ./src/main.cc
   ./src/abstractions.cc
   ./src/file_rules.cc
+  ./src/remove_function.cc
 )
 
 #### Check that gtest is installed ####
