Working on finalizing add tests

--- a/test/e2e/CMakeLists.txt
+++ b/test/e2e/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_SOURCES
   ./src/abstractions.cc
   ./src/file_rules.cc
   ./src/remove_function.cc
+  ./src/add_function.cc
 )
 
 #### Check that gtest is installed ####
