--- a/test/e2e/CMakeLists.txt
+++ b/test/e2e/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_SOURCES
   ./src/file_rules.cc
   ./src/remove_function.cc
   ./src/add_function.cc
+  ./src/edit_function.cc
 )
 
 #### Check that gtest is installed ####
